@@ -1,3 +1,8 @@
+2002-05-12  Havoc Pennington  <hp@pobox.com>
+
+	* src/main.c (main): turn on --g-fatal-warnings if 
+	METACITY_G_FATAL_WARNINGS env variable is set.
+
 2002-05-11  Anders Carlsson  <andersca@gnu.org>
 
 	* src/display.c: (find_tab_forward), (find_tab_backward),
